payment service + pulizia codice