@@ -1,54 +1,31 @@
 package com.tofork.paymentservice.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
-/**
- * SecurityConfig - Configurazione Spring Security per Payment-Service
- */
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    @Value("${app.frontend.url}")
-    private String frontendUrl;
-
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                // Disabilita CSRF per API REST
-                .csrf(csrf -> csrf
-                        .ignoringRequestMatchers(AntPathRequestMatcher.antMatcher("/api/payments/stripe/webhook"))
-                        .disable())
-
-                // Configura CORS
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-                // Configura sessioni stateless (JWT-based)
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-                // Autorizzazioni
-                .authorizeHttpRequests(auth -> auth
-                        // Endpoint pubblici
-                        .requestMatchers("/actuator/**").permitAll()
-                        .requestMatchers("/api/payments/stripe/webhook").permitAll()
-                        .requestMatchers("/api/payments/stripe/config").permitAll()
-
-                        // Tutti gli altri endpoint richiedono autenticazione
-                        // L'autenticazione JWT verrà gestita manualmente nei controller
-                        .anyRequest().permitAll());
+            .csrf(csrf -> csrf.disable())
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers("/api/payments/**").permitAll()
+                .anyRequest().permitAll()
+            );
 
         return http.build();
     }
@@ -56,34 +33,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // Consenti origini specifiche
-        configuration.setAllowedOriginPatterns(Arrays.asList(
-                "http://localhost:3000",    // Frontend React
-                "http://localhost:8080",    // Gateway o altro servizio
-                "http://localhost:8081",    // User-Service
-                "http://localhost:8082",    // Order-Service
-                "http://localhost:8083",    // Booking-Service
-                "https://checkout.stripe.com", // Stripe
-                frontendUrl                 // URL dinamico dal configuration
-        ));
-
-        // Metodi HTTP consentiti
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
-        ));
-
-        // Headers consentiti
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-
-        // Consenti credenziali (per JWT in Authorization header)
+        configuration.setAllowedOriginPatterns(List.of("*")); // Semplificato per dev
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-
-        // Esponi headers personalizzati se necessari
-        configuration.setExposedHeaders(Arrays.asList(
-                "Authorization", "Cache-Control", "Content-Type"
-        ));
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
